--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,11 @@
 
 
 <ul>
-    <li><a id="filter-page" routerLink="/filter-page" routerLinkActive="active">Filter-page</a></li>
-    <li><a id="other" routerLink="/other" routerLinkActive="active">Other</a></li>
-    <li><a id="open-close" routerLink="/open-close" routerLinkActive="active">Open/Close</a></li>
+    <li><a id="landing" routerLink="/landing">Landing</a></li>
+    <li><a id="name" routerLink="/name-form">Name form</a></li>
+    <li><a id="avatar" routerLink="/avatar-form">Avatar form</a></li>
+    <li><a id="tarea" routerLink="/tarea">Tareas</a></li>
+    <li><a id="game" routerLink="/game">Game</a></li>
 </ul>
 
 
