--- a/src/app/open-close/open-close.component.css
+++ b/src/app/open-close/open-close.component.css
@@ -10,4 +10,9 @@
     font-weight: bold;
     font-size: 20px;
   }
+  .container{
+    width: 100vw;
+    height: 100vh;
+    background-color:#e29a26;
+  }
   
